--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "movieList",
+  "name": "movielist",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --mode development",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
