--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movielist",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple movie list built with react form scratch",
   "main": "index.js",
   "scripts": {
     "start": "webpack --mode development",
@@ -20,7 +20,15 @@
   },
   "homepage": "https://github.com/jrobertorma/basicMovieList#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
