--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple movie list built with react form scratch",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +26,7 @@
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
